--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <title>B572 Surveillance</title>
     
-    <link rel="manifest" href="/b572-guide/assets/manifest-BifNJCRs.json" />
+    <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="#001A70" />
     
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3523/3523063.png" />
